--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,11 +37,10 @@ services:
     command: uvicorn apps.main:app --host 0.0.0.0 --port 1000 --reload
     ports:
       - "1000:1000"
-
-    # dns:
-    #   - 8.8.8.8
-    #   - 8.8.4.4
-    #   - 1.1.1.1
+    dns:
+       - 8.8.8.8
+       - 8.8.4.4
+       - 1.1.1.1
     volumes:
       - .:/code
     environment:
